--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(CMV)
+add_library(empty)
 
 target_link_libraries(
     CMV
@@ -10,6 +11,12 @@ target_sources(
     CMV
     PRIVATE
     main.cpp
+)
+
+target_sources(
+    empty
+    PRIVATE
+    empty.cpp
 )
 
 add_subdirectory(CMakeNodeLib)
