Reworked to use new CMakeGraph

--- a/src/CMakeNodeLib/CMakeLists.txt
+++ b/src/CMakeNodeLib/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories(
 target_sources(
     CMakeNode
     PRIVATE
+    CMakeGraph.cpp
     CMakeNode.cpp
     CMakeParser.cpp
     CMakeVisualizer.cpp
